# Fusion-Vortex

./: .agents  .clangd  .clippy.toml  .gitignore  .sourcery.yaml  .tmp_impl.fu  .tmp_iotlib.fu  .tmp_min2.fu  ABSOLUTE_FINAL_SUMMARY.md  BUILD_POLICY.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  ChangeLog.md  DocumentIndex.md  FINAL_PROJECT_SUMMARY.md  FLUX_QUICK_REF.md  FUSION_VISUAL_COMPILER.md  FUSION_VS_RUST.md  Fusion.toml  HOW_TO_ENFORCE_RULES.md  LICENSE  LINTING.md  PURE_FUSION_MIGRATION_STATUS.md  PURE_FUSION_SELF_HOSTING_GUIDE.md  QuickStartGuide.md  README.md  RELEASE_NOTES.md  SECURITY.md  SIMPLIFIED_PARTS.md  ULTIMATE_PROJECT_SUMMARY.md  VIOLATIONS_FIXED.md  _b64.txt  _fix2.py  _fix3.py  _fix_all.py  _fix_flux.py  _fix_stubs.ps1  _fix_stubs.py  _test_class.fu  (+115 more)
cmd/fusion/: Cargo.toml  Fusion.toml
cmd/fusion/fusion/: Cargo.toml  Fusion.toml
cmd/fusion/src/: lib.rs  main.fu  main.rs  sysroot.fu  welcome.fu  welcome.rs
cmd/reactor-cli/: Cargo.toml  Fusion.toml
cmd/reactor-cli/examples/: fusion-deploy.fu  fusion-deploy.rs
cmd/reactor-cli/src/: context.fu  context.rs  interactive.fu  interactive.rs  ipc.fu  ipc.rs  lib.fu  lib.rs  prelude.fu  prelude.rs  schema.fu  schema.rs
crates/agent/: Cargo.toml  Fusion.toml
crates/agent/src/: executor.fu  executor.rs  lib.fu  lib.rs  plan.fu  plan.rs  safety.fu  safety.rs
crates/ai-core/: Cargo.toml  Fusion.toml
crates/ai-core/src/: indexer.fu  lib.rs  loss.fu  prompt.fu  safety.rs
crates/ai-enhanced/: Cargo.toml  Fusion.toml
crates/ai-enhanced/src/: code_generation.fu  code_generation.rs  code_refactoring.fu  code_refactoring.rs  code_review.fu  code_review.rs  code_understanding.fu  code_understanding.rs  context_engine.fu  context_engine.rs  interactive_agent.fu  lib.fu  lib.rs  providers.fu  tool_use.fu
crates/analyzer/: Cargo.toml  Fusion.toml
crates/analyzer/src/: lib.fu
crates/fdbg/: Cargo.toml
crates/fdbg/src/: breakpoint.fu  context.fu  disasm.fu  disasm_ops.fu.inc  engine.fu  error.fu  ffi.fu  lib.fu  main.fu  process.fu  symbols.fu  unwind.fu
crates/flux-resolve-engine/: Cargo.toml  example_manifest.toml
crates/flux-resolve-engine/src/: lib.rs  main.rs
crates/fuc/: Cargo.toml  Fusion.toml
crates/fuc/src/: ast.fu  ast.rs  ast_types.rs  borrowck.rs  cache.rs  cli.fu  cli.rs  cluster.rs  codegen.fu  dummy.fu  fingerprint.rs  fmt.rs  forge.rs  forge_orch.rs  forge_pkg.rs  fs.rs  gc.rs  gpu.fu  graph.rs  hypercycle.fu  hypercycle_suite.fu  io.fu  ir.fu  ir.rs  ir_inliner.rs  ir_lower.rs  lexer.fu  lexer.rs  lexer_selfhost.fu  lib.fu  lib.rs  lib_entry.rs  linker.rs  linter.rs  llvm.fu  lsp.rs  macros.rs  main.fu  main.rs  main_rust_compat.fu  (+43 more)
crates/fuc/tests/: frontend.fu  integration.fu  native_test_runner.fu  run_tests.fu  test_codegen.fu  test_ir.fu  test_lexer.fu  test_parser.fu  test_runtime.fu  test_sema.fu  wasm_integration.rs  wasm_runtime.rs
crates/fuc2/: Cargo.toml
crates/fuc2/src/: main.fu  main.rs  preprocess.rs
crates/fusion-browser-agent/: Cargo.toml  Fusion.toml
crates/fusion-browser-agent/src/: lib.fu  lib.rs
crates/fusion-monolith-core/: Cargo.toml  Fusion.toml  README.md
crates/fusion-monolith-core/benches/: orchestrator_bench.fu
crates/fusion-monolith-core/src/: agents.fu  agents.rs  auditor.fu  auditor.rs  cli.fu  cli.rs  config.fu  config.rs  (+16 more)
crates/fusion-review-policy/: Cargo.toml  Fusion.toml
crates/fusion-settings/: Cargo.toml  Fusion.toml
crates/fusion_runtime_core/: Cargo.toml
crates/fusion_test/: Cargo.toml
crates/fusionc/: Cargo.toml  Fusion.toml
crates/github/: Cargo.toml
crates/neuralmesh_vortex_pqc/: Cargo.toml  build.rs
crates/pkgmgr/: Cargo.toml  Fusion.toml
crates/policy/: Cargo.toml  Fusion.toml
crates/tensorweave/: Cargo.toml  Fusion.toml  README.md
crates/toolchain/: Cargo.toml  Fusion.toml
crates/vscode-runtime/: Cargo.toml  Fusion.toml
fusion_ecosystem/: Cargo.toml
fusionc/: Cargo.toml  Fusion.toml  build_from_fu.py
fusionc/src/: cache.fu  cache.rs  compile.fu  compile.rs  main.fu  main.rs  monolith_client.fu  monolith_client.rs  optimizer.fu  optimizer.rs
runtime/: .gitignore  CONTRIBUTING.md  Cargo.toml  ChangeLog.md  Fusion.toml  QuickStartGuide.md  README.md  RELOCATION_SUMMARY.md  cc_wrapper.c  hashmap_runtime.c  hashset_runtime.c  runtime.c  vector_runtime.c
runtime/docs/: DocumentIndex.md  FluxResolveMigration.md
runtime/examples/: complete_interweaving.fu  complete_interweaving.rs  hybrid_integration.fu  hybrid_integration.rs  hybrid_workload.fu  hybrid_workload.rs  vlc_quantum_ml.fu  vqe_interwoven.fu  vqe_interwoven.rs
runtime/native/: CMakeLists.txt  README.md  fusionrt.c  fusionrt.h
v2.0 Vortex/: CMakeLists.txt  README.md
v2.0 Vortex/archive/: .clangd  build_log.txt  core_syms.txt  genesis_syms.txt  vortex_user_cli.c
v2.0 Vortex/cli/: account.go  auth.go  dashboard.go  go.mod  help.go  installer.go  main.go  onboarding.go  pkgmgr.go  settings.go  style.go
v2.0 Vortex/deployment/: README.md
v2.0 Vortex/docs/: AVX512_FIX_SUMMARY.md  COMPILATION_FIXES.md  ChangeLog.md  ERROR_ANALYSIS_FINAL.md  FIXES_APPLIED.md  IDE_ERROR_ANALYSIS.md  README.md  Windows_Build_Fixes.md
v2.0 Vortex/include/: hc_constant_time.h  hc_ed25519.h  hc_gpu_universal.h  hc_math_avx512.h  hc_math_boost.h  hc_math_core.h  hc_pqc_boost.h  hc_vacuum_engine.h  platform_threading.h  vortex_advanced_algorithms.h  vortex_extended_structures.h  vortex_monitoring_api.h  vortex_pqc_api.h
v2.0 Vortex/scripts/: build_bench.sh
v2.0 Vortex/src/: hc_backend_cuda.cu  hc_backend_rocm.hip.cpp  hc_ed25519.c  hc_gpu_universal.c  hc_vacuum_engine.c  hc_vacuum_portable.c  vortex_integration.c  vortex_monitoring_helpers.c  vortex_pqc_api.c
v2.0 Vortex/tests/: test_blinding.c
v2.0 Vortex/tools/: dashboard.html  secure_dashboard.c  secure_dashboard.html  secure_dashboard_v2.html  secure_dashboard_v3.html  secure_dashboard_v4.html  secure_dashboard_v5_cli.html  secure_dashboard_v6.html  secure_login_cli_auth.tpl.html  secure_login_grey_cli.tpl.html  secure_login_modern.tpl.html  secure_login_neon.tpl.html  vortex_dashboard.c
(+7496 files in other folders)
