#===----------------------------------------------------------------------===#
# Cargo.toml - Master Workspace Manifest for the Fusion Ecosystem
# Language: TOML
# Dialect: British English
# Design Rationale: Binds all autonomous components into a single compilable
# workspace, ensuring hermetic builds across the entire distributed mesh.
#===----------------------------------------------------------------------===#

[package]
name = "fusion_ecosystem"
version = "1.0.0"
edition = "2021"
authors = ["Fusion Systems Engineering Team"]
description = "Polyglot compilation, memory safety, and distributed HAFT mesh orchestration."

# Ensure the project compiles with zero external dependencies to maintain
# absolute control over the memory safety and cryptographic boundaries.
[dependencies]

[[bin]]
name = "fusionc"
path = "src/main.rs"

[[bin]]
name = "vortex_borrow_checker"
path = "src/bin/vortex_borrow_checker.rs"

[[bin]]
name = "haft_mesh_node"
path = "src/bin/haft_mesh_node.rs"

[[bin]]
name = "supernova_kernel"
path = "src/bin/supernova_kernel.rs"

[[bin]]
name = "deployment_orchestrator"
path = "src/bin/deployment_orchestrator.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort" # Enforce strict crashes on memory safety violations