[package]
name = "fusionc"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
colored = "2.1"
sha2 = "0.10"
hex = "0.4"
ureq = { version = "2.10", features = ["json"] }
base64 = "0.22"
fusion_frontend = { path = "../fusion_frontend" }
fusion_ir = { path = "../fusion_ir" }
fusion_project = { path = "../fusion_project" }
fusion_vm = { path = "../fusion_vm" }

[workspace]
