[package]
name = "fusion"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Fusion Programming Language CLI - Main entry point"

[[bin]]
name = "fusion"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
clap = { workspace = true }
clap_complete = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
git2 = { workspace = true }

# Internal crates
fusion-core = { path = "../../crates/core" }
fusion-toolchain = { path = "../../crates/toolchain" }
fusion-tester = { path = "../../ecosystem/crates/tester" }
fusion-formatter = { path = "../../ecosystem/crates/formatter" }
fusion-docgen = { path = "../../ecosystem/crates/docgen" }
fusion-pkgmgr = { path = "../../crates/pkgmgr" }
fusion-debugger = { path = "../../ecosystem/crates/debugger" }
fusion-analyzer = { path = "../../crates/analyzer" }
fusion-profiler = { path = "../../ecosystem/crates/profiler" }
fusion-audit = { path = "../../ecosystem/crates/audit" }
fusion-deploy = { path = "../../ecosystem/crates/deploy" }
fusion-settings = { path = "../../crates/settings" }
fusion-projects = { path = "../../crates/projects" }
fusion-github = { path = "../../ecosystem/crates/github" }
fusion-ai-cli = { path = "../../ecosystem/crates/ai-cli" }
lazy_static = "1.4"

