[package]
name = "fusion"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Tool: Fusion CLI with excellent error messages, VS Code integration, and MCP support"
keywords = ["fusion", "cli", "vscode", "mcp", "development"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

[[bin]]
name = "fusion"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
reactor-cli = { path = "../reactor-cli", version = "0.1.0" }
tokio = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
git2 = { workspace = true }
dirs = { workspace = true }
urlencoding = "2.1"

# Internal crates
fusion-core = { workspace = true }
fusion-toolchain = { path = "../../crates/toolchain" }
fusion-tester = { path = "../../registry/crates/tester" }
fusion-formatter = { path = "../../registry/crates/formatter" }
fusion-docgen = { path = "../../registry/crates/docgen" }
fusion-pkgmgr = { path = "../../crates/pkgmgr" }
fusion-debugger = { path = "../../registry/crates/debugger" }
fusion-analyzer = { path = "../../crates/analyzer" }
fusion-profiler = { path = "../../registry/crates/profiler" }
fusion-audit = { path = "../../registry/crates/audit" }
fusion-deploy = { path = "../../registry/crates/deploy" }
fusion-ai-cli = { path = "../../registry/crates/ai-cli" }
fusion-settings = { path = "../../crates/fusion-settings" }
fusion-projects = { path = "../../crates/projects" }
fusion-github = { path = "../../registry/crates/github" }
fusion-agents = { path = "../../registry/crates/agents" }
fusion-mcp = { path = "../../registry/crates/mcp" }
fusion-ai-enhanced = { path = "../../crates/ai-enhanced" }
fusion-agentic-core = { path = "../../registry/crates/fusion-agentic-core" }
fusion-vscode-runtime = { path = "../../crates/vscode-runtime" }
fusion-policy = { workspace = true }
# fusion-terminal-browser = { path = "../../registry/crates/fusion-terminal-browser" }
lazy_static = "1.4"

