[package]
name = "reactor-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.133" }
thiserror = { version = "2.0.6" }
colored = { version = "2.0" }
inquire = { version = "0.6" }
lazy_static = { version = "1.4" }
fusion_std = { path = "../../registry/crates/std" }

[features]
default = []
nebula_2_1 = []
supernova = []
