[package]
name = "fusion-ai-core"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Framework: AI infrastructure core with adapters and safety checks."
authors = ["Fusion Team"]
repository = "https://github.com/QuantumSecureTechnologiesInc/Fusion-Programming-Language"
keywords = ["fusion", "framework", "ai", "infrastructure", "framework"]
categories = ["development-tools", "framework"]
readme = "README.md"
[dependencies]
fusion_core = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
pqcrypto-dilithium = { workspace = true }
blake3 = { workspace = true }
fusion-core = { path = "../core" }
futures = "0.3"
walkdir = "2.4"

[dev-dependencies]
tempfile = "3.8"

