[package]
name = "fusion-ai-enhanced"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Enhanced AI capabilities with Claude Code, Codex, and Gemini-level features"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
futures = "0.3"
uuid = { workspace = true }
async-stream = { workspace = true }

# AI provider APIs - external crates
# Note: These may need to be added to workspace or kept as direct deps

# Code analysis
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"

# Context management
dashmap = "5.5"
lru = "0.12"

# Extension integration
fusion-mcp = { path = "../../registry/crates/mcp" }
fusion-vscode-runtime = { path = "../vscode-runtime" }

[dev-dependencies]
tempfile = { workspace = true }
