[package]
name = "fusion-ai-enhanced"
description = "Enhanced AI capabilities with Claude Code, Codex, and Gemini-level features"
version = "0.2.0"
edition = "2021"
authors = ["Fusion Team"]
license = "MIT"

[dependencies]
anyhow = { version = "1.0.94" }
thiserror = { version = "2.0.6" }
tokio = { version = "1.42.0", features = ["full", "tracing"] }
async-trait = { version = "0.1.83" }
serde = { version = "1.0.216", features = ["derive", "rc"] }
serde_json = { version = "1.0.133" }
tracing = { version = "0.1.41" }
reqwest = { version = "0.12.9", features = ["json", "stream", "multipart"] }
futures = { version = "0.3.31" }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
async-stream = { version = "0.3.5" }
tree-sitter = { version = "0.20" }
tree-sitter-rust = { version = "0.20" }
tree-sitter-python = { version = "0.20" }
dashmap = { version = "5.5" }
lru = { version = "0.12" }
fusion-mcp = { path = "../../registry/crates/mcp" }
fusion-vscode-runtime = { path = "../vscode-runtime" }
fusion_std = { path = "/mnt/c/Projects/fusion_v0_1_all_features/registry/crates/std" }

[dev-dependencies]
tempfile = { version = "3.14.0" }
