[package]
name = "fusion-analyzer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Fusion static analyzer - Security lints and code analysis"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
fusion-core = { path = "../../registry/crates/core" }
