[package]
name = "fusion-analyzer"
description = "Fusion static analyzer - Security lints and code analysis"
version = "0.2.0"
edition = "2021"
authors = ["Fusion Team"]
license = "MIT"

[dependencies]
anyhow = { version = "1.0.94" }
thiserror = { version = "2.0.6" }
serde = { version = "1.0.216", features = ["derive", "rc"] }
fusion-core = { path = "../../registry/crates/fusion-core", package = "fusion-core" }
fusion_std = { path = "../../registry/crates/std" }
